# coogi-2

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LEAD_LISTS_DESIGN.md  Procfile  README.md  SUPABASE_SETUP.md  add_columns.py  add_user_columns.sql  api.py  app.py  backfill_company_to_email_list.py  backfill_contact_data.py  check_agent_data.py  check_and_populate_agents_table.sql  check_hunter_flow.py  check_supabase.py  company_blacklist.json  create_agents_table.sql  create_supabase_tables.py  debug_start.sh  deploy_instructions.md  export_to_github.md  fix_missing_columns.sql  memory.json  nixpacks.toml  pyproject.toml  railway.json  remove_contact_data.py  remove_contact_data_column.sql  replit.md  requirements.txt  run.py  setup.py  setup_supabase.py  simple_agents_setup.sql  start.sh  start_debug.sh  (+21 more)
.streamlit/: config.toml
attached_assets/: Pasted--MCP-Master-Control-Program-Optimized-fo-1753840133265_1753840133266.txt  Pasted-JobSpy-is-a-job-scraping-library-with-the-goal-of-aggregating-all-the-jobs-from-popular-job-boards-w-1753841110812_1753841110813.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-number-input-elements-with-the-same-1753847272295_1753847272296.txt
supabase/.temp/: pooler-url
templates/: agent_detail.html  dashboard.html  index.html  login.html  signup.html
utils/: __init__.py  blacklist_manager.py  company_analyzer.py  contact_finder.py  contract_analyzer.py  email_generator.py  instantly_manager.py  job_scraper.py  memory_manager.py  supabase_tracker.py
(+4 files in other folders)
