[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jobspy>=0.31.0",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
    "supabase>=2.0.0",
    "httpx>=0.24.0",
]
